--- a/package.json
+++ b/package.json
@@ -4,16 +4,26 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node index.js",
-    "start:server": "nodemon index.js"
+    "start": "node build/index.js",
+    "start:dev": "nodemon build/index.js",
+    "watch": "run-p tsc:watch start:dev",
+    "tsc:watch": "tsc --watch"
   },
   "dependencies": {
+    "@types/cors": "^2.8.6",
+    "@types/express": "^4.17.6",
+    "@types/node": "^14.0.13",
+    "@types/pg": "^7.14.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "npm-run-all": "^4.1.5",
     "pg": "^8.2.1"
   },
   "engines": {
     "node": ">=12.0.0"
+  },
+  "devDependencies": {
+    "typescript": "^3.9.5"
   }
 }
